--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -89,7 +89,6 @@ country.ago           = Angola
 country.arg           = Argentinien
 country.arm           = Armenien
 country.abw           = Aruba
-country.asa           = Amerikanisch Samoa
 country.atg           = Antigua+Barbuda
 country.aus           = Australien
 country.aut           = \u00D6sterreich
@@ -117,7 +116,7 @@ country.can           = Kanada
 country.cym           = Cayman-Inseln
 country.tcd           = Tschad
 country.che           = Schweiz
-country.chi           = Chile
+country.chl           = Chile
 country.chn           = China VR
 country.civ           = Elfenbeink\u00FCste
 country.cmr           = Kamerun
@@ -145,7 +144,7 @@ country.eri           = Eritrea
 country.esp           = Spanien
 country.est           = Estland
 country.eth           = \u00C4thiopien
-country.fij           = Fiji
+country.fji           = Fiji
 country.fin=Finnland
 country.fra           = Frankreich
 country.fro           = Faroe-Inseln
@@ -226,7 +225,7 @@ country.nzl           = Neuseeland
 country.omn           = Oman
 country.pak           = Pakistan
 country.pan           = Panama
-country.par           = Paraguay
+country.pry           = Paraguay
 country.per           = Peru
 country.phl           = Philippinen
 country.pse           = Palestina
@@ -240,7 +239,7 @@ country.rou           = Rum\u00E4nien
 country.zaf           = S\u00FCdafrika
 country.rus           = Russland
 country.rwa           = Ruanda
-country.sam           = Samoa
+country.wsm           = Samoa
 country.sco           = Schottland
 country.sdn           = Sudan
 country.sen           = Senegal
@@ -250,7 +249,7 @@ country.kna           = St. Kitts und Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
 country.smr           = San Marino
-country.sol           = Salomonen
+country.slb           = Salomonen
 country.som           = Somalia
 country.srb           = Serbien
 country.lka           = Sri Lanka
@@ -262,10 +261,10 @@ country.svn           = Slovenien
 country.swe           = Schweden
 country.swz           = Swaziland
 country.syr           = Syrien
-country.tah           = Tahiti
+country.pyf           = Tahiti
 country.tza           = Tanzania
 country.tca           = Turks- und Caicosinseln
-country.tga           = Tonga
+country.ton           = Tonga
 country.tha           = Thailand
 country.tjk           = Tajikistan
 country.tkm           = Turkmenistan
@@ -278,10 +277,10 @@ country.tur           = T\u00FCrkei
 country.are           = Verein. Arab. Emirate
 country.uga           = Uganda
 country.ukr           = Ukraine
-country.uru           = Uruguay
+country.ury           = Uruguay
 country.usa           = USA
 country.uzb           = Uzbekistan
-country.van           = Vanuatu
+country.vut           = Vanuatu
 country.ven           = Venezuela
 country.vgb           = Brit. Virgin Inseln
 country.vnm           = Vietnam
