--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -88,7 +88,6 @@ country.ago           = Angola
 country.arg           = Argentyna
 country.arm           = Armenia
 country.abw           = Aruba
-country.asa           = Samoa
 country.atg           = Antigua i Barbuda
 country.aus           = Australia
 country.aut           = Austria
@@ -116,7 +115,7 @@ country.can           = Kanada
 country.cym           = Cayman Islands
 country.tcd           = Czad
 country.che           = Szwajcaria
-country.chi           = Chile
+country.chl           = Chile
 country.chn           = Chiny
 country.civ           = Ivory Coast
 country.cmr           = Kamerun
@@ -144,7 +143,7 @@ country.eri           = Eritrea
 country.esp           = Hiszpania
 country.est           = Estonia
 country.eth           = Etiopia
-country.fij           = Fiji
+country.fji           = Fiji
 country.fin           = Finlandia
 country.fra           = Francja
 country.fro           = Faroe Islands
@@ -224,7 +223,7 @@ country.nzl           = Nowa Zelandia
 country.omn           = Oman
 country.pak           = Pakistan
 country.pan           = Panama
-country.par           = Paragwaj
+country.pry           = Paragwaj
 country.per           = Peru
 country.phl           = Filipiny
 country.pse           = Palestyna
@@ -238,7 +237,7 @@ country.rou           = Rumunia
 country.zaf           = Afryka Po\u0142udniowa
 country.rus           = Rosja
 country.rwa           = Rwanda
-country.sam           = Samoa
+country.wsm           = Samoa
 country.sco           = Szkocja
 country.sdn           = Sudan
 country.sen           = Senegal
@@ -248,7 +247,7 @@ country.kna           = St. Kitts and Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
 country.smr           = San Marino
-country.sol           = Solomon Islands
+country.slb           = Solomon Islands
 country.som           = Somalia
 country.srb           = Serbia
 country.lka           = Sri Lanka
@@ -259,10 +258,10 @@ country.svk           = S\u0142owacja
 country.swe           = Szwecja
 country.swz           = Swaziland
 country.syr           = Syria
-country.tah           = Tahiti
+country.pyf           = Tahiti
 country.tza           = Tanzania
 country.tca           = Turks and Caicos
-country.tga           = Tonga
+country.ton           = Tonga
 country.tha           = Tajlandia
 country.tjk           = Tajikistan
 country.tkm           = Turkmenistan
@@ -275,10 +274,10 @@ country.tur           = Turcja
 country.are           = Zjednoczone Emiraty Arabskie
 country.uga           = Uganda
 country.ukr           = Ukraina
-country.uru           = Urugwaj
+country.ury           = Urugwaj
 country.usa           = USA
 country.uzb           = Uzbekistan
-country.van           = Vanuatu
+country.vut           = Vanuatu
 country.ven           = Wenezuela
 country.vgb           = Brit. Virgin Islands
 country.vnm           = Wietnam
