--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -88,7 +88,6 @@ country.ago           = Angola
 country.arg           = Argentina
 country.arm           = Armenien
 country.abw           = Aruba
-country.asa           = Amerikanska Samoa
 country.atg           = Antigua och Barbuda
 country.aus           = Australien
 country.aut           = \u00D6sterrike
@@ -116,7 +115,7 @@ country.can           = Kanada
 country.cym           = Cayman\u00F6arna
 country.tcd           = Tchad
 country.che           = Schweiz
-country.chi           = Chile
+country.chl           = Chile
 country.chn           = Kina
 country.civ           = Elfenbenskusten
 country.cmr           = Kamerun
@@ -144,7 +143,7 @@ country.eri           = Eritrea
 country.esp           = Spanien
 country.est           = Estland
 country.eth           = Etiopien
-country.fij           = Fiji
+country.fji           = Fiji
 country.fin           = Finland
 country.fra           = Frankrike
 country.fro           = F\u00E4r\u00F6arna
@@ -225,7 +224,7 @@ country.nzl           = Nya Zeeland
 country.omn           = Oman
 country.pak           = Pakistan
 country.pan           = Panama
-country.par           = Paraguay
+country.pry           = Paraguay
 country.per           = Peru
 country.phl           = Filippinerna
 country.pse           = Palestina
@@ -239,7 +238,7 @@ country.rou           = Rum\u00E4nien
 country.zaf           = Sydafrika
 country.rus           = Ryssland
 country.rwa           = Rwanda
-country.sam           = Samoa
+country.wsm           = Samoa
 country.sco           = Skottland
 country.sdn           = Sudan
 country.sen           = Senegal
@@ -249,7 +248,7 @@ country.kna           = Saint Kitts och Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
 country.smr           = San Marino
-country.sol           = Salomon\u00F6arna
+country.slb           = Salomon\u00F6arna
 country.som           = Somalia
 country.srb           = Serbien
 country.lka           = Sri Lanka
@@ -260,10 +259,10 @@ country.svk           = Slovakien
 country.swe           = Sverige
 country.swz           = Swaziland
 country.syr           = Syrien
-country.tah           = Tahiti
+country.pyf           = Tahiti
 country.tza           = Tanzania
 country.tca           = Turks- och Caicos\u00F6arna
-country.tga           = Tonga
+country.ton           = Tonga
 country.tha           = Thailand
 country.tjk           = Tadzjikistan
 country.tkm           = Turkmenistan
@@ -276,10 +275,10 @@ country.tur           = Turkiet
 country.are           = F\u00F6renade arabemiraten
 country.uga           = Uganda
 country.ukr           = Ukraina
-country.uru           = Uruguay
+country.ury           = Uruguay
 country.usa           = USA
 country.uzb           = Uzbekistan
-country.van           = Vanuatu
+country.vut           = Vanuatu
 country.ven           = Venezuela
 country.vgb           = Brittiska Jungfru\u00F6arna
 country.vnm           = Vietnam
