--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -88,7 +88,6 @@ country.ago = Angola
 country.arg = Argentina
 country.arm = Arm\u00E9nie
 country.abw = Aruba
-country.asa = Americk\u00E1 Samoa
 country.atg = Antigua+Barbuda
 country.aus = Austr\u00E1lie
 country.aut = Rakousko
@@ -116,7 +115,7 @@ country.can = Kanada
 country.cym = Kajmansk\u00E9 ostrovy
 country.tcd = \u010Cad
 country.che = \u0160v\u00FDcarsko
-country.chi = Chile
+country.chl = Chile
 country.chn = \u010C\u00EDnsk\u00E1 lidov\u00E1 republika
 country.civ = Pob\u0159e\u017E\u00ED slonoviny
 country.cmr = Kamerun
@@ -144,7 +143,7 @@ country.eri = Eritrea
 country.esp = \u0160pan\u011Blsko
 country.est = Estonsko
 country.eth = Etiopie
-country.fij = Fid\u017Ei
+country.fji = Fid\u017Ei
 country.fin = Finsko
 country.fra = Francie
 country.fro = Faersk\u00E9 ostrovy
@@ -225,7 +224,7 @@ country.nzl = Nov\u00FD Z\u00E9land
 country.omn = Om\u00E1n
 country.pak = P\u00E1kist\u00E1n
 country.pan = Panama
-country.par = Paraguay
+country.pry = Paraguay
 country.per = Peru
 country.phl = Filip\u00EDny
 country.pse = Palestina
@@ -239,7 +238,7 @@ country.rou = Rumunsko
 country.zaf = Jihoafrick\u00E1 republika
 country.rus = Rusko
 country.rwa = Rwanda
-country.sam = Samoa
+country.wsm = Samoa
 country.sco = Skotsko
 country.sdn = S\u00FAd\u00E1n
 country.sen = Senegal
@@ -249,7 +248,7 @@ country.kna = Svat\u00FD Kry\u0161tof a Nevis
 country.sle = Sierra Leone
 country.slv = Salvador
 country.smr = San Marino
-country.sol = \u0160alamounovy ostrovy
+country.slb = \u0160alamounovy ostrovy
 country.som = Som\u00E1lsko
 country.srb = Srbsko
 country.lka = Sr\u00ED Lanka
@@ -260,10 +259,10 @@ country.svk = Slovensko
 country.swe = \u0160v\u00E9dsko
 country.swz = Svazijsko
 country.syr = S\u00FDrie
-country.tah = Tahiti
+country.pyf = Tahiti
 country.tza = Tanzanie
 country.tca = Turks a Caicos
-country.tga = Tonga
+country.ton = Tonga
 country.tha = Thajsko
 country.tjk = T\u00E1d\u017Eikist\u00E1n
 country.tkm = Turkmenist\u00E1n
@@ -276,10 +275,10 @@ country.tur = Turecko
 country.are = Spojen\u00E9 arabsk\u00E9 emir\u00E1ty
 country.uga = Uganda
 country.ukr = Ukrajina
-country.uru = Uruguay
+country.ury = Uruguay
 country.usa = USA
 country.uzb = Uzbekist\u00E1n
-country.van = Vanuatu
+country.vut = Vanuatu
 country.ven = Venezuela
 country.vgb = Britsk\u00E9 Panensk\u00E9 ostrovy
 country.vnm = Vietnam
