--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -87,7 +87,6 @@ country.ago           = Angola
 country.arg           = Argentina
 country.arm           = Armenia
 country.abw           = Aruba
-country.asa           = American Samoa
 country.atg           = Antigua+Barbuda
 country.aus           = Australia
 country.aut           = Austria
@@ -115,7 +114,7 @@ country.can           = Canada
 country.cym           = Cayman Islands
 country.tcd           = Chad
 country.che           = Switzerland
-country.chi           = Chile
+country.chl           = Chile
 country.chn           = China PR
 country.civ           = Ivory Coast
 country.cmr           = Cameroon
@@ -143,7 +142,7 @@ country.eri           = Eritrea
 country.esp           = Espa\u00F1a
 country.est           = Estonia
 country.eth           = Ethiopia
-country.fij           = Fiji
+country.fji           = Fiji
 country.fin           = Finland
 country.fra           = France
 country.fro           = Faroe Islands
@@ -224,7 +223,7 @@ country.nzl           = New Zealand
 country.omn           = Oman
 country.pak           = Pakistan
 country.pan           = Panama
-country.par           = Paraguay
+country.pry           = Paraguay
 country.per           = Peru
 country.phl           = Philippines
 country.pse           = Palestine
@@ -238,7 +237,7 @@ country.rou           = Romania
 country.zaf           = South Africa
 country.rus           = Russia
 country.rwa           = Rwanda
-country.sam           = Samoa
+country.wsm           = Samoa
 country.sco           = Scotland
 country.sdn           = Sudan
 country.sen           = Senegal
@@ -248,7 +247,7 @@ country.kna           = St. Kitts and Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
 country.smr           = San Marino
-country.sol           = Solomon Islands
+country.slb           = Solomon Islands
 country.som           = Somalia
 country.srb           = Serbia
 country.lka           = Sri Lanka
@@ -259,10 +258,10 @@ country.svk           = Slovakia
 country.swe           = Sweden
 country.swz           = Swaziland
 country.syr           = Syria
-country.tah           = Tahiti
+country.pyf           = Tahiti
 country.tza           = Tanzania
 country.tca           = Turks and Caicos
-country.tga           = Tonga
+country.ton           = Tonga
 country.tha           = Thailand
 country.tjk           = Tajikistan
 country.tkm           = Turkmenistan
@@ -275,10 +274,10 @@ country.tur           = Turkey
 country.are           = United Arab Emir.
 country.uga           = Uganda
 country.ukr           = Ukraine
-country.uru           = Uruguay
+country.ury           = Uruguay
 country.usa           = USA
 country.uzb           = Uzbekistan
-country.van           = Vanuatu
+country.vut           = Vanuatu
 country.ven           = Venezuela
 country.vgb           = Brit. Virgin Islands
 country.vnm           = Vietnam
