bugfix catalan language selector

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -629,3 +629,4 @@ all.past.matches=Partits passats
 administration.testdata.title=Creaci\u00F3 de dades de prova
 administration.testdemousers.title=Prova d'usuaris de demostraci\u00F3
 administration.dangerzone.title=Zona de perill
+language.cs=txec
