update form login hanlding

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -630,3 +630,4 @@ administration.testdata.title=Creaci\u00F3 de dades de prova
 administration.testdemousers.title=Prova d'usuaris de demostraci\u00F3
 administration.dangerzone.title=Zona de perill
 language.cs=txec
+login.error={0}
