--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -632,3 +632,4 @@ administration.testdemousers.title=Testovat demo u\u017Eivatele
 administration.testdata.title=Vytv\u00E1\u0159en\u00ED testovac\u00EDch dat
 all.past.matches=Minul\u00E9 z\u00E1pasy
 administration.dangerzone.title=Nebezpe\u010Dn\u00E1 z\u00F3na
+login.error={0}
