--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -635,3 +635,4 @@ ranking.topTipperOfToday.tooltip=Tipper des Tages
 administration.testdata.title=Anlage Testdaten
 administration.testdemousers.title=Test Demo Benutzer
 administration.dangerzone.title=L\u00F6sch-Zone
+login.error={0}
