--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -631,3 +631,4 @@ all.past.matches=Partidos pasados
 administration.testdemousers.title=Usuarios de demostraci\u00F3n de prueba
 administration.testdata.title=Creaci\u00F3n de datos de prueba
 administration.dangerzone.title=Zona de peligro
+login.error={0}
