--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -632,3 +632,4 @@ all.past.matches=Tidigare matcher
 administration.testdemousers.title=Testa demoanv\u00E4ndare
 administration.testdata.title=Testa dataskapande
 administration.dangerzone.title=Riskzon
+login.error={0}
