--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -633,3 +633,4 @@ all.past.matches=Past Matches
 administration.testdata.title=Test Data Creation
 administration.testdemousers.title=Test Demo Users
 administration.dangerzone.title=Danger Zone
+login.error={0}
