--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -634,3 +634,4 @@ country.gbr=Wielka Brytania
 administration.testdemousers.title=U\u017Cytkownicy wersji demonstracyjnej
 administration.testdata.title=Tworzenie danych testowych
 administration.dangerzone.title=Strefa zagro\u017Cenia
+login.error={0}
