added group K and L

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -631,3 +631,5 @@ administration.testdemousers.title=Prova d'usuaris de demostraci\u00F3
 administration.dangerzone.title=Zona de perill
 language.cs=txec
 login.error={0}
+group.title.K=Grup K
+group.title.L=Grup L
