--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -633,3 +633,5 @@ administration.testdata.title=Vytv\u00E1\u0159en\u00ED testovac\u00EDch dat
 all.past.matches=Minul\u00E9 z\u00E1pasy
 administration.dangerzone.title=Nebezpe\u010Dn\u00E1 z\u00F3na
 login.error={0}
+group.title.K=Skupina K
+group.title.L=Skupina L
