--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -636,3 +636,5 @@ administration.testdata.title=Anlage Testdaten
 administration.testdemousers.title=Test Demo Benutzer
 administration.dangerzone.title=L\u00F6sch-Zone
 login.error={0}
+group.title.K=Gruppe K
+group.title.L=Gruppe L
