--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -634,3 +634,5 @@ administration.testdata.title=Test Data Creation
 administration.testdemousers.title=Test Demo Users
 administration.dangerzone.title=Danger Zone
 login.error={0}
+group.title.K=Group K
+group.title.L=Group L
