--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -632,3 +632,5 @@ administration.testdemousers.title=Usuarios de demostraci\u00F3n de prueba
 administration.testdata.title=Creaci\u00F3n de datos de prueba
 administration.dangerzone.title=Zona de peligro
 login.error={0}
+group.title.K=Grupo K
+group.title.L=Grupo L
