--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -635,3 +635,5 @@ administration.testdemousers.title=U\u017Cytkownicy wersji demonstracyjnej
 administration.testdata.title=Tworzenie danych testowych
 administration.dangerzone.title=Strefa zagro\u017Cenia
 login.error={0}
+group.title.K=Grupa K
+group.title.L=Grupa L
