--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -633,3 +633,5 @@ administration.testdemousers.title=Testa demoanv\u00E4ndare
 administration.testdata.title=Testa dataskapande
 administration.dangerzone.title=Riskzon
 login.error={0}
+group.title.K=Grupp K
+group.title.L=Grupp L
