make points configuration maintainable at runtime

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -36,14 +36,14 @@ administration.runtime.configuration.enableChangingUsername=El nom d'usuari es p
 administration.runtime.configuration.enableChangingUsername.tooltip = Els usuaris poden canviar el nom d'usuari
 administration.runtime.configuration.enabledParentChildRanking = Classificaci\u00F3 separada
 administration.runtime.configuration.enabledParentChildRanking.tooltip = Classificaci\u00F3 separada de pares i fills
-administration.runtime.configuration.extraBetPoints = Punts per a apostes de bonificaci\u00F3
+points.config.extraBetPoints = Punts per a apostes de bonificaci\u00F3
 administration.runtime.configuration.favouriteCountry = Pa\u00EDs Preferit
 administration.runtime.configuration.joker = Configuraci\u00F3 Joker-Aposta
 administration.runtime.configuration.jokerMaxCount.title = max. Joker Count
 administration.runtime.configuration.passwordForReset = Contrasenya usada despr\u00E9s del restabliment de contrasenya
-administration.runtime.configuration.pointsFinalWinner.title=campi\u00F3
-administration.runtime.configuration.pointsSemiFinalWinner.title=subcampi\u00F3
-administration.runtime.configuration.pointsThirdFinalWinner.title=3r guanyador
+points.config.pointsFinalWinner.title=campi\u00F3
+points.config.pointsSemiFinalWinner.title=subcampi\u00F3
+points.config.pointsThirdFinalWinner.title=3r guanyador
 administration.runtime.configuration.showDemoDataNavigationEntry = Dades de demostraci\u00F3 de l'entrada del men\u00FA
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Mostra l'entrada del men\u00FA de dades de demostraci\u00F3 a la barra de navegaci\u00F3.
 administration.runtime.configuration.timeZone = Zona hor\u00E0ria
@@ -618,3 +618,11 @@ language.cs=txec
 login.error={0}
 group.title.K=Grup K
 group.title.L=Grup L
+points.config.title=Configuraci\u00F3 de punts
+points.config.subtitle=Puntuaci\u00F3
+points.config.pointsCorrectResult=resultat correcte
+points.config.pointsSameGoalDifference=mateixa difer\u00E8ncia de gols
+points.config.pointsCorrectWinner=guanyador correcte
+points.config.pointsCorrectNumberOfGoalsOneTeam=nombre correcte de gols
+points.config.saved=La configuraci\u00F3 de punts s'ha desat!
+points.config.reset.defaults=restablir al valor predeterminat
