--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -36,14 +36,14 @@ administration.runtime.configuration.enableChangingUsername = U\u017Eivatelsk\u0
 administration.runtime.configuration.enableChangingUsername.tooltip = U\u017Eivatel\u00E9 mohou zm\u011Bnit sv\u00E9 u\u017Eivatelsk\u00E9 jm\u00E9no.
 administration.runtime.configuration.enabledParentChildRanking = Samostatn\u00E9 \u0159azen\u00ED
 administration.runtime.configuration.enabledParentChildRanking.tooltip = Odd\u011Blen\u00E9 \u0159azen\u00ED rodi\u010D\u016F a d\u011Bt\u00ED
-administration.runtime.configuration.extraBetPoints = Body za bonusov\u00E9 s\u00E1zky
+points.config.extraBetPoints = Body za bonusov\u00E9 s\u00E1zky
 administration.runtime.configuration.favouriteCountry = Obl\u00EDben\u00E1 zem\u011B
 administration.runtime.configuration.joker = Konfigurace \u017Eol\u00EDk\u016F
 administration.runtime.configuration.jokerMaxCount.title = Maxim\u00E1ln\u00ED po\u010Det \u017Eol\u00EDk\u016F
 administration.runtime.configuration.passwordForReset = Pou\u017Eit\u00E9 heslo po obnoven\u00ED hesla
-administration.runtime.configuration.pointsFinalWinner.title= v\u00EDt\u011Bz
-administration.runtime.configuration.pointsSemiFinalWinner.title=2. m\u00EDsto
-administration.runtime.configuration.pointsThirdFinalWinner.title=3. m\u00EDsto
+points.config.pointsFinalWinner.title= v\u00EDt\u011Bz
+points.config.pointsSemiFinalWinner.title=2. m\u00EDsto
+points.config.pointsThirdFinalWinner.title=3. m\u00EDsto
 administration.runtime.configuration.showDemoDataNavigationEntry = Demonstra\u010Dn\u00ED data polo\u017Eky menu
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Zobrazit polo\u017Eku menu s demo daty v naviga\u010Dn\u00EDm panelu.
 administration.runtime.configuration.timeZone = \u010Casov\u00E9 p\u00E1smo
@@ -620,3 +620,12 @@ administration.dangerzone.title=Nebezpe\u010Dn\u00E1 z\u00F3na
 login.error={0}
 group.title.K=Skupina K
 group.title.L=Skupina L
+points.config.pointsCorrectNumberOfGoalsOneTeam=spr\u00E1vn\u00FD po\u010Det g\u00F3l\u016F
+points.config.pointsCorrectResult=spr\u00E1vn\u00FD v\u00FDsledek
+points.config.pointsCorrectWinner=spr\u00E1vn\u00FD v\u00EDt\u011Bz
+points.config.pointsSameGoalDifference=stejn\u00FD g\u00F3lov\u00FD rozd\u00EDl
+points.config.reset.defaults=resetovat na v\u00FDchoz\u00ED
+points.config.saved=Konfigurace bod\u016F byla ulo\u017Eena!
+points.config.subtitle=Bodov\u00E1n\u00ED
+points.config.title=Konfigurace bodu
+ranking.topTipperOfToday.tooltip=Tip\u00E9r dne
