--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -36,14 +36,14 @@ administration.runtime.configuration.enableChangingUsername              = Benut
 administration.runtime.configuration.enableChangingUsername.tooltip      = Benutzer d\u00FCrfen ihren Benutzernamen \u00E4ndern
 administration.runtime.configuration.enabledParentChildRanking           = getrenntes Ranking
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = getrenntes Erwachsenen- und Kinder-Ranking
-administration.runtime.configuration.extraBetPoints                      = Punkte f\u00FCr Bonus Tipps
+points.config.extraBetPoints                      = Punkte f\u00FCr Bonus Tipps
 administration.runtime.configuration.favouriteCountry                    = L\u00E4nder-Favorit
 administration.runtime.configuration.joker                               = Konfiguration Joker-Tipp
 administration.runtime.configuration.jokerMaxCount.title                 = max. Anzahl Joker
 administration.runtime.configuration.passwordForReset                    = Passwort nach Passwort-Reset
-administration.runtime.configuration.pointsFinalWinner.title=Meister
-administration.runtime.configuration.pointsSemiFinalWinner.title=Vize-Meister
-administration.runtime.configuration.pointsThirdFinalWinner.title=3. Platz
+points.config.pointsFinalWinner.title=Meister
+points.config.pointsSemiFinalWinner.title=Vize-Meister
+points.config.pointsThirdFinalWinner.title=3. Platz
 administration.runtime.configuration.showDemoDataNavigationEntry         = Men\u00FCeintrag "Datenanlage"
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Men\u00FCeintrag "Datenanlage" in Navigation anzeigen.
 administration.runtime.configuration.timeZone                            = Zeitzone
@@ -621,3 +621,11 @@ administration.dangerzone.title=L\u00F6sch-Zone
 login.error={0}
 group.title.K=Gruppe K
 group.title.L=Gruppe L
+points.config.title=Punktekonfiguration
+points.config.subtitle=Punktevergabe
+points.config.pointsCorrectResult=richtiges Ergebnis
+points.config.pointsSameGoalDifference=gleiche Tordifferenz
+points.config.pointsCorrectWinner=richtige Gewinner
+points.config.pointsCorrectNumberOfGoalsOneTeam=richtige Anzahl Tore
+points.config.saved=Die Punktekonfiguration wurde gespeichert!
+points.config.reset.defaults=auf Defaults zur\u00FCcksetzen
