--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -36,14 +36,14 @@ administration.runtime.configuration.enableChangingUsername              = Usern
 administration.runtime.configuration.enableChangingUsername.tooltip      = Users are allowed to change their username
 administration.runtime.configuration.enabledParentChildRanking           = separate ranking
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = separated parent and child ranking
-administration.runtime.configuration.extraBetPoints                      = Points for bonus bets
+points.config.extraBetPoints                      = Points for bonus bets
 administration.runtime.configuration.favouriteCountry                    = Country Favourite
 administration.runtime.configuration.joker                               = Configuration Joker-Bet
 administration.runtime.configuration.jokerMaxCount.title                 = max. Joker Count
 administration.runtime.configuration.passwordForReset                    = Used password after password reset
-administration.runtime.configuration.pointsFinalWinner.title=champion
-administration.runtime.configuration.pointsSemiFinalWinner.title=vice champion
-administration.runtime.configuration.pointsThirdFinalWinner.title=3rd winner
+points.config.pointsFinalWinner.title=champion
+points.config.pointsSemiFinalWinner.title=vice champion
+points.config.pointsThirdFinalWinner.title=3rd winner
 administration.runtime.configuration.showDemoDataNavigationEntry         = Menu entry demo data
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Show demo data menu entry in navigation bar.
 administration.runtime.configuration.timeZone                            = Time Zone
@@ -621,3 +621,11 @@ administration.dangerzone.title=Danger Zone
 login.error={0}
 group.title.K=Group K
 group.title.L=Group L
+points.config.pointsCorrectNumberOfGoalsOneTeam=correct number of goals
+points.config.pointsCorrectResult=correct result
+points.config.pointsCorrectWinner=correct winner
+points.config.pointsSameGoalDifference=same goal difference
+points.config.reset.defaults=reset to default
+points.config.saved=The points configuration has been saved!
+points.config.subtitle=Scoring
+points.config.title=Point configuration
