--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -36,14 +36,14 @@ administration.runtime.configuration.enableChangingUsername              = El no
 administration.runtime.configuration.enableChangingUsername.tooltip      = Los usuarios pueden cambiar su nombre de usuario
 administration.runtime.configuration.enabledParentChildRanking           = Clasificaci\u00F3n separada
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = Clasificaci\u00F3n separada de padres e hijos
-administration.runtime.configuration.extraBetPoints                      = Puntos para apuestas de bonificaci\u00F3n
+points.config.extraBetPoints                      = Puntos para apuestas de bonificaci\u00F3n
 administration.runtime.configuration.favouriteCountry                    = Pa\u00EDs Favorito
 administration.runtime.configuration.joker                               = Configuraci\u00F3n Joker-Apuesta
 administration.runtime.configuration.jokerMaxCount.title                 = max. Joker Count
 administration.runtime.configuration.passwordForReset                    = Contrase\u00F1a usada despu\u00E9s del restablecimiento de contrase\u00F1a
-administration.runtime.configuration.pointsFinalWinner.title=campe\u00F3n
-administration.runtime.configuration.pointsSemiFinalWinner.title=subcampe\u00F3n
-administration.runtime.configuration.pointsThirdFinalWinner.title=3.er ganador
+points.config.pointsFinalWinner.title=campe\u00F3n
+points.config.pointsSemiFinalWinner.title=subcampe\u00F3n
+points.config.pointsThirdFinalWinner.title=3.er ganador
 administration.runtime.configuration.showDemoDataNavigationEntry         = Datos de demostraci\u00F3n de la entrada del men\u00FA
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Mostrar la entrada del men\u00FA de datos de demostraci\u00F3n en la barra de navegaci\u00F3n.
 administration.runtime.configuration.timeZone                            = Zona horaria
@@ -619,3 +619,11 @@ administration.dangerzone.title=Zona de peligro
 login.error={0}
 group.title.K=Grupo K
 group.title.L=Grupo L
+points.config.pointsCorrectNumberOfGoalsOneTeam=n\u00FAmero correcto de goles
+points.config.pointsCorrectResult=resultado correcto
+points.config.pointsCorrectWinner=Ganadora correcta
+points.config.pointsSameGoalDifference=misma diferencia de goles
+points.config.reset.defaults=restablecer a los valores predeterminados
+points.config.saved=\u00A1La configuraci\u00F3n de puntos ha sido guardada!
+points.config.subtitle=Tanteo
+points.config.title=Configuraci\u00F3n de puntos
