--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -36,14 +36,14 @@ administration.runtime.configuration.enableChangingUsername              = Zmian
 administration.runtime.configuration.enableChangingUsername.tooltip      = U\u017Cytkownicy maj\u0105 mo\u017Cliwo\u015B\u0107 zmieniania swoich nazw
 administration.runtime.configuration.enabledParentChildRanking           = Osobne rankingi
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = Osobne rankingi dla rodzic\u00F3w i dzieci
-administration.runtime.configuration.extraBetPoints                      = Punkty za bonusowe zak\u0142ady
+points.config.extraBetPoints                      = Punkty za bonusowe zak\u0142ady
 administration.runtime.configuration.favouriteCountry                    = Ulubiony kraj
 administration.runtime.configuration.joker                               = Konfiguracja Joker\u00F3w
 administration.runtime.configuration.jokerMaxCount.title                 = Maksymalna liczba Joker\u00F3w
 administration.runtime.configuration.passwordForReset                    = Has\u0142o ustawione po zresetowaniu
-administration.runtime.configuration.pointsFinalWinner.title=mistrza
-administration.runtime.configuration.pointsSemiFinalWinner.title=wicemistrza
-administration.runtime.configuration.pointsThirdFinalWinner.title=trzecie miejsce
+points.config.pointsFinalWinner.title=mistrza
+points.config.pointsSemiFinalWinner.title=wicemistrza
+points.config.pointsThirdFinalWinner.title=trzecie miejsce
 administration.runtime.configuration.showDemoDataNavigationEntry         = Menu entry demo data
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Show demo data menu entry in navigation bar.
 administration.runtime.configuration.timeZone                            = Strefa czasowa
@@ -622,3 +622,11 @@ administration.dangerzone.title=Strefa zagro\u017Cenia
 login.error={0}
 group.title.K=Grupa K
 group.title.L=Grupa L
+points.config.pointsCorrectNumberOfGoalsOneTeam=odpowiedni\u0105 liczb\u0119 bramek
+points.config.pointsCorrectResult=prawid\u0142owy wynik
+points.config.pointsCorrectWinner=w\u0142a\u015Bciwy zwyci\u0119zca
+points.config.pointsSameGoalDifference=ta sama r\u00F3\u017Cnica bramek
+points.config.reset.defaults=przywr\u00F3\u0107 ustawienia domy\u015Blne
+points.config.saved=Konfiguracja punkt\u00F3w zosta\u0142a zapisana!
+points.config.subtitle=Punktacja
+points.config.title=Konfiguracja punktu
