--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -36,14 +36,14 @@ administration.runtime.configuration.enableChangingUsername              = M\u00
 administration.runtime.configuration.enableChangingUsername.tooltip      = M\u00F6jligt f\u00F6r anv\u00E4ndare att \u00E4ndra sitt anv\u00E4ndarnamn.
 administration.runtime.configuration.enabledParentChildRanking           = Separat ranking
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = Separat ranking f\u00F6r vuxna och barn
-administration.runtime.configuration.extraBetPoints                      = Po\u00E4ng f\u00F6r bonustips
+points.config.extraBetPoints                      = Po\u00E4ng f\u00F6r bonustips
 administration.runtime.configuration.favouriteCountry                    = Favoritland
 administration.runtime.configuration.joker                               = Konfiguration Jokertips
 administration.runtime.configuration.jokerMaxCount.title                 = Max antal jokrar
 administration.runtime.configuration.passwordForReset                    = Standardl\u00F6senord efter l\u00F6senords\u00E5terst\u00E4llning
-administration.runtime.configuration.pointsFinalWinner.title             = M\u00E4stare
-administration.runtime.configuration.pointsSemiFinalWinner.title         = Andraplats
-administration.runtime.configuration.pointsThirdFinalWinner.title        = Tredjeplats
+points.config.pointsFinalWinner.title             = M\u00E4stare
+points.config.pointsSemiFinalWinner.title         = Andraplats
+points.config.pointsThirdFinalWinner.title        = Tredjeplats
 administration.runtime.configuration.showDemoDataNavigationEntry         = Demodata i navigeringsf\u00E4ltet
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Visa menyposten f\u00F6r demodata i navigeringsf\u00E4ltet.
 administration.runtime.configuration.timeZone                            = Tidszon
@@ -620,3 +620,11 @@ administration.dangerzone.title=Riskzon
 login.error={0}
 group.title.K=Grupp K
 group.title.L=Grupp L
+points.config.pointsCorrectNumberOfGoalsOneTeam=r\u00E4tt antal m\u00E5l
+points.config.pointsCorrectResult=r\u00E4tt resultat
+points.config.pointsCorrectWinner=r\u00E4tt vinnare
+points.config.pointsSameGoalDifference=samma m\u00E5lskillnad
+points.config.reset.defaults=\u00E5terst\u00E4ll till standard
+points.config.saved=Po\u00E4ngkonfigurationen har sparats!
+points.config.subtitle=Po\u00E4ngs\u00E4ttning
+points.config.title=Punktkonfiguration
