added points config hint

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -626,3 +626,4 @@ points.config.pointsCorrectWinner=guanyador correcte
 points.config.pointsCorrectNumberOfGoalsOneTeam=nombre correcte de gols
 points.config.saved=La configuraci\u00F3 de punts s'ha desat!
 points.config.reset.defaults=restablir al valor predeterminat
+points.config.hintForChange=Assegureu-vos de no canviar la configuraci\u00F3 de punts despr\u00E9s d'haver comen\u00E7at cap partit! No hi haur\u00E0 cap rec\u00E0lcul de punts quan canvi\u00EF la configuraci\u00F3!
