--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -629,3 +629,4 @@ points.config.saved=Konfigurace bod\u016F byla ulo\u017Eena!
 points.config.subtitle=Bodov\u00E1n\u00ED
 points.config.title=Konfigurace bodu
 ranking.topTipperOfToday.tooltip=Tip\u00E9r dne
+points.config.hintForChange=Ujist\u011Bte se, \u017Ee nem\u011B\u0148te konfiguraci bod\u016F po zah\u00E1jen\u00ED jak\u00E9hokoli z\u00E1pasu! P\u0159i zm\u011Bn\u011B konfigurace nedojde k \u017E\u00E1dn\u00E9mu p\u0159epo\u010D\u00EDt\u00E1v\u00E1n\u00ED bod\u016F!
