--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -629,3 +629,4 @@ points.config.pointsCorrectWinner=richtige Gewinner
 points.config.pointsCorrectNumberOfGoalsOneTeam=richtige Anzahl Tore
 points.config.saved=Die Punktekonfiguration wurde gespeichert!
 points.config.reset.defaults=auf Defaults zur\u00FCcksetzen
+points.config.hintForChange=Bitte keine Konfigurations\u00E4nderungen nach Spielbeginn t\u00E4tigen. Es wird keine erneute Punkteberechnung durchgef\u00FChrt!
