--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -629,3 +629,4 @@ points.config.reset.defaults=reset to default
 points.config.saved=The points configuration has been saved!
 points.config.subtitle=Scoring
 points.config.title=Point configuration
+points.config.hintForChange=Be sure not to change the points configuration after any match has started! There will be no recalculation of points when the configuration changes!
