--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -627,3 +627,4 @@ points.config.reset.defaults=restablecer a los valores predeterminados
 points.config.saved=\u00A1La configuraci\u00F3n de puntos ha sido guardada!
 points.config.subtitle=Tanteo
 points.config.title=Configuraci\u00F3n de puntos
+points.config.hintForChange=\u00A1Aseg\u00FArate de no cambiar la configuraci\u00F3n de puntos despu\u00E9s de que comience el partido! No se volver\u00E1n a calcular los puntos al cambiar la configuraci\u00F3n.
