--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -630,3 +630,4 @@ points.config.reset.defaults=przywr\u00F3\u0107 ustawienia domy\u015Blne
 points.config.saved=Konfiguracja punkt\u00F3w zosta\u0142a zapisana!
 points.config.subtitle=Punktacja
 points.config.title=Konfiguracja punktu
+points.config.hintForChange=Pami\u0119taj, aby nie zmienia\u0107 konfiguracji punkt\u00F3w po rozpocz\u0119ciu meczu! Nie b\u0119dzie przeliczania punkt\u00F3w, gdy konfiguracja si\u0119 zmieni!
