--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -628,3 +628,4 @@ points.config.reset.defaults=\u00E5terst\u00E4ll till standard
 points.config.saved=Po\u00E4ngkonfigurationen har sparats!
 points.config.subtitle=Po\u00E4ngs\u00E4ttning
 points.config.title=Punktkonfiguration
+points.config.hintForChange=Se till att inte \u00E4ndra po\u00E4ngkonfigurationen efter att n\u00E5gon match har b\u00F6rjat! Det blir ingen omr\u00E4kning av po\u00E4ng n\u00E4r konfigurationen \u00E4ndras!
